revert to maven build